--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <option value="-">-</option>
             </select>
 
-            <input type="text" name="" placeholder="Produkt" id="text">
-            <input type="pris" name="" placeholder="Pris" id="pris">
+            <input type="text" name="produkt" placeholder="Produkt" id="text">
+            <input type="number" name="pris" placeholder="Pris" id="pris">
 
         </form>
     </div>
@@ -45,8 +45,6 @@
             <div id="income"><h4>Inkomster:</h4></div>
         </div>
     </div>
-  </div>
-
   
 </div>
 
